Fix spacing around headline numbers

--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,7 @@ p, .nav-link {
 
 .headline_number_card p {
     font-size: 2rem;
+    line-height: 1;
 }
 
 .headline_number {
